[package]
name = "ua-test-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
reqwest = "0.11.25"
serde = { version = "1.0.197", features = ["derive"] } 
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full", "rt", "macros"] } 
ua-rlib = { git = "https://github.com/Unrated-Limited-Unlimited/ua-rlib", branch = "main" }